[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.0"
regex = "1.10.6"
env_logger = "0.11.5"
eframe = "0.29.0"
chrono = "0.4.38"
sha256 = "1.5.0"
rfd = "0.15.0"
log = "0.4.22"
stopwatch = "0.0.7"
serde = { version = "1.0.210", features = ["derive"] }
confy = "0.6.1"
